# automation-studio

./: .gitignore  AGENTS.md  AGENTS_DESIGN.md  AGENTS_WORKPLAN.md  AI_ROUTING_PLAN.md  CLAUDE.md  IMAGE_EVAL_LOOP_PLAN.md  LICENSE  OVERVIEW.md  README.md  SECURITY_NOTES.md  SPEC.md  UI_PLAN.md  UX_REVIEW.md  UX_REVIEW_2026-07.md  automation_studio_decisions.html  automation_studio_overview.html  automation_studio_spec.html  package.sh  package_exclude.txt  pyproject.toml  setup_launchd.sh  start.sh
.claude/: settings.json
.claude/agents/: analysis.md  image.md  music.md  pipeline.md  publish.md  video.md  web.md
Python/: YouTube_1080p_Optimized.epr  YouTube_1080p_Optimized.epr.bak  _app_config.py  app.py  app_benchmark_analyze.py  app_benchmark_channels.py  app_benchmark_common.py  app_benchmark_concept.py  app_benchmark_description.py  app_benchmark_seed.py  app_benchmark_thumbnail.py  app_benchmark_title.py  app_channel_cache.py  app_channel_thumbnail.py  app_comment_mining.py  app_competitor.py  app_config_backup.py  app_core.py  app_digest.py  app_ffrender.py  app_genre_radar.py  app_image_compositor.py  app_image_eval_loop.py  app_image_modules.py  app_image_prompt.py  app_learning.py  app_live.py  app_llm_runner.py  app_midjourney.py  app_notify.sh  app_orchestrator.py  app_photoshop.py  app_pipeline.py  app_posting_strategy.py  app_premiere.py  app_process_tracks.py  app_quota.py  app_reconcile.py  app_render_queue.py  app_retention.py  (+44 more)
Python/routers/: __init__.py  (+8 more)
Script/: [タイムスタンプ]create_timestamp.jsx  _[自動配置くん]premiere_long.jsx  _place_images_only.jsx  app_export_ame.jsx
cep_extension/: README.md  install.sh  install_photoshop.sh
docs/: AI_BGM_BENCHMARK_ANALYSIS_CONCEPT.md  AI_BGM_BENCHMARK_VIEWER_LEARNING.md  API_COMPLIANCE.md  ARCHITECTURE_MAP.md  QUOTA_AUDIT_APPLICATION.md  RUNBOOK_VOL.md  UX_MODEL.md  operation_test.md  privacy_for_hp.html  runbook.md  spec_p1p2p3.md
skills/: Design.md  analysis.md  app-ai-propose.md  app-bgimage.md  app-competitor-spreadsheet.md  app-create-folder.md  app-export.md  app-image-select.md  app-imitate-evolve.md  app-live-streaming.md  app-master-config.md  app-multilingual-meta.md  app-notify.md  app-onboarding.md  app-premiere.md  app-psd-composite.md  app-remote-access.md  app-rename-audio.md  app-routing.md  app-schedule.md  app-series-proposals.md  app-suno-download.md  app-thumbnail.md  app-track-player.md  app-video-edit.md  app-web-dashboard.md  app-workflow.md  app-youtube-desc.md  app-youtube-upload.md  image.md  music.md  pipeline.md  publish.md  video.md  web.md
uxp_plugin/: sync_to_local.sh
(+34 files in other folders)
